login form has smaller top margin to prevent unnecessary scrolling on smaller screens

--- a/app/static/scss/_template.scss
+++ b/app/static/scss/_template.scss
@@ -19,7 +19,7 @@ body {
 
 .form {
 
-    margin-top: 100px;
+    margin-top: 30px;
     background: #fff;
     border-radius: 5px;
     -webkit-border-radius: 5px;
